fix text overflow on Nav Tab items

--- a/source/stylesheets/components/_nav.scss
+++ b/source/stylesheets/components/_nav.scss
@@ -83,6 +83,8 @@
     color:$text-color;
     margin-left:0;
     margin-right:0;
+    text-overflow:ellipsis;
+    overflow: hidden;
   }
   > li{
     margin-bottom: -1px;
